fixed z-indexes

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -17,7 +17,7 @@
   }
 }
 .cl-header {
-  z-index: 9;
+  z-index: 9999;
   width: 100%;
   position: fixed;
   padding: 10px;
