--- a/src/components/setList/style.scss
+++ b/src/components/setList/style.scss
@@ -256,7 +256,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 10px 50px;
   position: sticky;
   border-radius: 10px;
   top: 0;
