--- a/src/components/setsInfo/style.scss
+++ b/src/components/setsInfo/style.scss
@@ -12,6 +12,7 @@
   justify-content: space-between;
   padding-top: 50px;
   box-sizing: border-box;
+  z-index: 999;
 }
 
 
